@@ -23,6 +23,8 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import okhttp3.mockwebserver.MockResponse;
 import okhttp3.mockwebserver.MockWebServer;
 import okhttp3.mockwebserver.RecordedRequest;
@@ -32,6 +34,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.web.reactive.function.client.WebClient;
@@ -409,7 +413,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       assertThat(result).isNotNull();
       assertThat(result.connections()).hasSize(1);
@@ -421,7 +425,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       assertThat(result.from()).isNotNull();
       assertThat(result.from().id()).isEqualTo("8503000");
@@ -434,7 +438,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       assertThat(result.to()).isNotNull();
       assertThat(result.to().id()).isEqualTo("8507000");
@@ -447,7 +451,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       ApiConnection connection = result.connections().getFirst();
       assertThat(connection.duration()).isEqualTo("00d00:57:00");
@@ -460,7 +464,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       ApiConnectionsResponse result =
-          transportClient.getConnections(FROM, TO, null, null, List.of());
+          transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       assertThat(result.connections().getFirst().sections()).hasSize(1);
     }
@@ -470,7 +474,7 @@ class TransportClientImplTest {
     void shouldSendFromAndToAsQueryParams() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).contains("from=" + FROM).contains("to=" + TO);
@@ -481,7 +485,7 @@ class TransportClientImplTest {
     void shouldSendGetRequestToConnectionsPath() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getMethod()).isEqualTo("GET");
@@ -493,7 +497,7 @@ class TransportClientImplTest {
     void shouldIncludeDateParamWhenProvided() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, LocalDate.of(2024, 10, 10), null, List.of());
+      transportClient.getConnections(FROM, TO, LocalDate.of(2024, 10, 10), null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).contains("date=2024-10-10");
@@ -504,7 +508,7 @@ class TransportClientImplTest {
     void shouldNotIncludeDateParamWhenNull() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).doesNotContain("date=");
@@ -515,7 +519,7 @@ class TransportClientImplTest {
     void shouldIncludeTimeParamWhenProvided() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, LocalTime.of(8, 0), List.of());
+      transportClient.getConnections(FROM, TO, null, LocalTime.of(8, 0), List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).contains("time=08:00");
@@ -526,7 +530,7 @@ class TransportClientImplTest {
     void shouldNotIncludeTimeParamWhenNull() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).doesNotContain("time=");
@@ -538,7 +542,7 @@ class TransportClientImplTest {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
       transportClient.getConnections(
-          FROM, TO, null, null, List.of(TransportType.TRAIN, TransportType.BUS));
+          FROM, TO, null, null, List.of(TransportType.TRAIN, TransportType.BUS), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       String path = recorded.getPath();
@@ -550,7 +554,7 @@ class TransportClientImplTest {
     void shouldNotIncludeTransportationsWhenListIsEmpty() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, List.of());
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).doesNotContain("transportations");
@@ -561,10 +565,72 @@ class TransportClientImplTest {
     void shouldNotIncludeTransportationsWhenListIsNull() throws Exception {
       mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
 
-      transportClient.getConnections(FROM, TO, null, null, null);
+      transportClient.getConnections(FROM, TO, null, null, null, null);
 
       RecordedRequest recorded = mockWebServer.takeRequest();
       assertThat(recorded.getPath()).doesNotContain("transportations");
+    }
+
+    @Test
+    @DisplayName("should include via params when list is provided")
+    void shouldIncludeViaParamsWhenProvided() throws Exception {
+      mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
+
+      transportClient.getConnections(
+          FROM, TO, null, null, List.of(), List.of("Olten", "Basel SBB"));
+
+      RecordedRequest recorded = mockWebServer.takeRequest();
+      String path = recorded.getPath();
+      assertThat(path).contains("Olten").contains("Basel");
+    }
+
+    @Test
+    @DisplayName("should not include via param when list is empty")
+    void shouldNotIncludeViaWhenListIsEmpty() throws Exception {
+      mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
+
+      transportClient.getConnections(FROM, TO, null, null, List.of(), List.of());
+
+      RecordedRequest recorded = mockWebServer.takeRequest();
+      assertThat(recorded.getPath()).doesNotContain("via");
+    }
+
+    @Test
+    @DisplayName("should not include via param when list is null")
+    void shouldNotIncludeViaWhenListIsNull() throws Exception {
+      mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
+
+      transportClient.getConnections(FROM, TO, null, null, List.of(), null);
+
+      RecordedRequest recorded = mockWebServer.takeRequest();
+      assertThat(recorded.getPath()).doesNotContain("via");
+    }
+
+    @Test
+    @DisplayName("should send via locations trimmed")
+    void shouldSendViaTrimmed() throws Exception {
+      mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
+
+      transportClient.getConnections(FROM, TO, null, null, List.of(), List.of("  Olten  "));
+
+      RecordedRequest recorded = mockWebServer.takeRequest();
+      assertThat(recorded.getPath()).contains("Olten");
+    }
+
+    @ParameterizedTest(name = "via list size: {0}")
+    @ValueSource(ints = {1, 2, 5})
+    @DisplayName("should include all via locations in the request")
+    void shouldIncludeAllViaLocations(int size) throws Exception {
+      mockWebServer.enqueue(jsonResponse(200, buildConnectionsResponse()));
+
+      List<String> vias =
+          IntStream.range(0, size).mapToObj(i -> "Station" + i).collect(Collectors.toList());
+
+      transportClient.getConnections(FROM, TO, null, null, List.of(), vias);
+
+      RecordedRequest recorded = mockWebServer.takeRequest();
+      String path = recorded.getPath();
+      vias.forEach(via -> assertThat(path).contains(via));
     }
   }
 
@@ -604,7 +670,7 @@ class TransportClientImplTest {
 
       ApiStationBoardResponse result = transportClient.getStationBoard(STATION, ID, LIMIT, TYPES);
 
-      ApiJourney journey = result.stationBoard().get(0);
+      ApiJourney journey = result.stationBoard().getFirst();
       assertThat(journey.name()).isEqualTo("IC 1");
       assertThat(journey.category()).isEqualTo("IC");
       assertThat(journey.operator()).isEqualTo("SBB");
